--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-**/.DS_Store
+
+# Thanks, Apple
+.DS_Store
+
+# Ignore bundler config.
+**/.bundle
+
+# Ignore the default SQLite database.
+**/db/*.sqlite3
+**/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+**/log/*
+**/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+**/node_modules
+**/yarn-error.log
+
+.byebug_history
